package behavioral.observer.CA1;

public interface MyStreamListener<T>{
    void listen(T t);
}
